# Phos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
ScriptGlue/: InternalCalls.cs  PhosEngine.csproj  ScriptGlue.sln
ScriptGlue/Components/: Component.cs  TransformComponent.cs
ScriptGlue/Core/: Entity.cs  InternalCalls.cs  Logging.cs  Quaternion.cs  ScriptableEntity.cs  Vector3.cs
ScriptGlue/Field/: Entity.cs  Prefab.cs
ScriptGlue/Input/: Input.cs  Keycodes.cs
ScriptGlue/Properties/: AssemblyInfo.cs
apps/editor/: CMakeLists.txt  asset_watcher.cpp  asset_watcher.h  editor_scene_manager.cpp  editor_scene_manager.h  editor_state_manager.h  file_dialog.h  main.cpp
apps/editor/asset_tools/: asset_builder.h  asset_importer.cpp  asset_importer.h  assimp_importer.cpp  assimp_importer.h  editor_asset.h  editor_cubemap_helper.cpp  editor_material_helper.cpp  editor_material_helper.h  editor_prefab_helper.cpp  entity_serializer.cpp  entity_serializer.h  scene_serializer.cpp
apps/editor/imgui/: imgui_impl.cpp  imgui_impl.h  imgui_utils.h
apps/editor/imgui/vulkan/: imgui_vulkan_impl.cpp  imgui_vulkan_impl.h
apps/editor/panels/: asset_inspector_panel.cpp  content_browser_panel.cpp  content_browser_panel.h  entity_hierarchy_panel.cpp  imgui_panel.h  scene_configuration_panel.cpp  scene_configuration_panel.h  viewport_panel.cpp  viewport_panel.h
apps/editor/panels/functional/: entity_components_renderer.cpp
assets/: suzanne.fbx
assets/shaders/: compile.sh  flat_color.frag  flat_color.vert  geometry.frag  geometry.vert  lighting.frag  lighting.vert  (+4 more)
editor/: asset_watcher.cpp  asset_watcher.h  editor_scene_manager.cpp  editor_scene_manager.h  editor_state_manager.h  file_dialog.cpp  file_dialog.h  main.cpp
scripts/: configure_mono.py
shaders/: Blending.frag  Blending.vert  EquirectangularToCubemap.comp  PBR.Forward.frag  PBR.Forward.vert  PBR.Geometry.Deferred.frag  PBR.Geometry.Deferred.vert  PBR.Lighting.Deferred.frag  PBR.Lighting.Deferred.vert  ShadowMap.frag  ShadowMap.vert  Skybox.frag  Skybox.vert  compile.sh  shader.frag  shader.vert
src/: CMakeLists.txt  core.h  main.cpp  test.cpp
src/asset/: asset.cpp  asset.h  asset_description.cpp  asset_description.h  asset_loader.cpp  asset_loader.h  asset_manager.h  asset_pack.cpp  asset_pack.h  asset_parsing_utils.h  asset_registry.cpp  asset_registry.h  editor_asset_manager.cpp  editor_asset_manager.h  model_asset.cpp  model_asset.h  prefab_asset.h  prefab_loader.cpp  prefab_loader.h  runtime_asset_manager.cpp  runtime_asset_manager.h
src/core/: application.cpp  application.h  entry_point.cpp  entry_point.h  glfw_window.cpp  glfw_window.h  layer.h  project.cpp  project.h  uuid.cpp  uuid.h  window.cpp  window.h
src/ecs/: component_array.h  component_manager.h  components.h  entity.h  registry.cpp  registry.h  scene.cpp  scene.h
src/input/: events.h  input.cpp  input.h  keycodes.h
src/managers/: shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h
src/renderer/: camera.cpp  camera.h  deferred_renderer.cpp  deferred_renderer.h  forward_renderer.cpp  forward_renderer.h  light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  primitive_factory.cpp  primitive_factory.h  static_mesh.cpp  static_mesh.h  sub_mesh.cpp  sub_mesh.h  vk_core.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffers.cpp  vulkan_buffers.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_pool.cpp  vulkan_command_pool.h  vulkan_context.cpp  vulkan_context.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_image.cpp  vulkan_image.h  vulkan_instance.cpp  (+17 more)
src/renderer/backend/: buffers.cpp  buffers.h  command_buffer.cpp  command_buffer.h  compute_pipeline.cpp  compute_pipeline.h  cubemap.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  material.cpp  material.h  presenter.cpp  presenter.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h
src/renderer/backend/vulkan/: deferred_renderer.cpp  deferred_renderer.h  vk_core.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffers.cpp  vulkan_buffers.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_pool.cpp  vulkan_command_pool.h  vulkan_compute_pipeline.cpp  vulkan_compute_pipeline.h  vulkan_context.cpp  vulkan_context.h  vulkan_cubemap.cpp  vulkan_cubemap.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_image.cpp  vulkan_image.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_material.cpp  vulkan_material.h  vulkan_physical_device.cpp  vulkan_physical_device.h  vulkan_presenter.cpp  vulkan_presenter.h  vulkan_queue.cpp  vulkan_queue.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_renderer.cpp  (+15 more)
src/scene/: component_array.h  component_manager.h  components.h  entity.h  entity.inl  entity_deserializer.cpp  entity_deserializer.h  model_loader.cpp  model_loader.h  registry.cpp  registry.h  scene.cpp  scene.h  scene_constants.h  scene_definition.h  scene_deserializer.cpp  scene_deserializer.h  scene_renderer.h  scene_serializer.cpp  scene_serializer.h
src/scripting/: class_field.cpp  class_field.h  class_handle.cpp  class_handle.h  class_instance_handle.cpp  class_instance_handle.h  main.cpp  script_glue.cpp  script_glue.h  scripting_engine.cpp  scripting_engine.h  scripting_system.cpp  scripting_system.h
src/scripting/TestSolution/: TestSolution.sln
src/scripting/TestSolution/TestProject/: Entity.cs  ExampleClass.cs  InternalCalls.cs  TestProject.csproj
src/scripting/TestSolution/TestProject/Properties/: AssemblyInfo.cs
src/utility/: logging.h  profiling.h
tests/: CMakeLists.txt
tests/scene/: registry_tests.cpp  scene_tests.cpp
tools/: CMakeLists.txt  assimp_importer.cpp
(+99 files in other folders)
